<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Fill"
    tools:context=".MainActivity">

    <com.zezekalo.iou.presentation.ui.view.CustomCoordinatePlateView
        android:id="@+id/customCoordinatePlateView"
        style="@style/Widget.Theme.IntersectionOverUnion.MyView"
        app:axisTextSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <com.zezekalo.iou.presentation.ui.view.CustomBoxView
            android:id="@+id/groundTruthBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:type="GROUND_TRUTH"/>

        <com.zezekalo.iou.presentation.ui.view.CustomBoxView
            android:id="@+id/predictedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:type="PREDICTED"/>

        <com.zezekalo.iou.presentation.ui.view.CustomBoxView
            android:id="@+id/unionBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:type="UNION_BOX"/>

    </com.zezekalo.iou.presentation.ui.view.CustomCoordinatePlateView>

    <LinearLayout
        android:id="@+id/buttonContainerLayout"
        style="@style/Wide"
        android:paddingHorizontal="24dp"
        android:paddingVertical="4dp"
        android:background="@color/gray_200"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/clearButton"
            android:text="@string/clear_button"
            style="@style/Widget.Theme.IntersectionOverUnion.Button" />

        <View style="@style/Widget.Theme.IntersectionOverUnion.StubView" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/inputButton"
            android:text="@string/input_data_button"
            style="@style/Widget.Theme.IntersectionOverUnion.Button" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/gray_100"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/customCoordinatePlateView"
        app:layout_constraintBottom_toTopOf="@id/buttonContainerLayout">

        <LinearLayout
            android:id="@+id/boxInputContainer"
            style="@style/Wide.Vertical">

            <include
                android:id="@+id/groundTruthBoxCoordinatesLayout"
                layout="@layout/bounding_box_text_layout"
                style="@style/Wide" />

            <include
                android:id="@+id/predictedBoxCoordinatesLayout"
                layout="@layout/bounding_box_text_layout"
                style="@style/Wide" />

            <include
                android:id="@+id/unionBoxCoordinatesLayout"
                layout="@layout/bounding_box_text_layout"
                style="@style/Wide" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/intersectionOverUnion"
                style="@style/Widget.Theme.IntersectionOverUnion.Title"
                android:paddingVertical="12dp"
                android:text="@string/intersection_over_union" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>