<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="144dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/boxTitle"
        style="@style/Widget.Theme.IntersectionOverUnion.Subtitle"
        android:gravity="center"
        tools:text="@string/ground_truth_title" />

    <LinearLayout style="@style/Wide.Vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/boxLeftContainer"
            android:hint="@string/left_hint"
            style="@style/Widget.Theme.IntersectionOverUnion.InputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/boxLeftInput"
                style="@style/Widget.Theme.IntersectionOverUnion.Input"
                android:nextFocusForward="@id/boxTopInput" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/boxTopContainer"
            android:hint="@string/top_hint"
            style="@style/Widget.Theme.IntersectionOverUnion.InputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/boxTopInput"
                style="@style/Widget.Theme.IntersectionOverUnion.Input"
                android:nextFocusForward="@id/boxRightInput" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/boxRightContainer"
            android:hint="@string/right_hint"
            style="@style/Widget.Theme.IntersectionOverUnion.InputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/boxRightInput"
                style="@style/Widget.Theme.IntersectionOverUnion.Input"
                android:nextFocusForward="@id/boxBottomInput" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/boxBottomContainer"
            android:hint="@string/bottom_hint"
            style="@style/Widget.Theme.IntersectionOverUnion.InputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/boxBottomInput"
                style="@style/Widget.Theme.IntersectionOverUnion.Input" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</LinearLayout>